# kill-the-port

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.changeset/: code-review-fixes.md  config.json
.github/workflows/: release.yml
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
rust/: Cargo.toml
rust/src/: linux.rs  macos.rs  main.rs  port.rs  windows.rs
src/: binary.ts  cli.ts  index.ts  types.ts
tests/: index.test.ts
