[package]
name = "kill-the-port"
version = "0.1.0"
edition = "2021"
description = "Blazing fast native port killer"
license = "MIT"

[[bin]]
name = "kill-the-port"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
